Refactor test account creation logic in AccountQueryServiceTest
Extracted test account creation into a helper method to reduce redundancy and improve readability. Updated all test cases to use the new `getTestAccount` method, ensuring consistency across the tests.